objects/vlocity_cmt__Party__c.object
<CustomObject>
    <description>A party is an individual, business, government entity, household, association, or other entity represented by one or more individuals. In Vlocity applications, each account, contact, and household tracked in the system is also tracked as a party.
The party object holds minimal information, but extends Salesforce to support business-to-consumer (B2C) and business-to-business-to-consumer (B2B2C) practices in addition to business-to-business (B2B) practices.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HouseholdId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>vlocity_cmt__Household__c</referenceTo>
        <relationshipName>Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsAccountIdMismatch__c</fullName>
        <formula>If(vlocity_cmt__AccountId__c!=null &amp;&amp; vlocity_cmt__PartyEntityId__c !=null &amp;&amp; vlocity_cmt__PartyEntityId__c != CASESAFEID(vlocity_cmt__AccountId__c), true, false)</formula>
        <label>Is Account Id Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsContactIdMismatch__c</fullName>
        <formula>If(vlocity_cmt__PartyEntityId__c != null &amp;&amp; vlocity_cmt__ContactId__c!=null &amp;&amp; vlocity_cmt__PartyEntityId__c != CASESAFEID(vlocity_cmt__ContactId__c), true, false)</formula>
        <label>Is Contact Id Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Location__c</fullName>
        <formula>IF(vlocity_cmt__PartyEntityType__c ==&apos;Contact&apos;,  vlocity_cmt__ContactId__r.vlocity_cmt__Location__c,
IF(vlocity_cmt__PartyEntityType__c ==&apos;Household&apos; || vlocity_cmt__PartyEntityType__c ==&apos;Group&apos; || vlocity_cmt__PartyEntityType__c ==&apos;Account&apos; , &quot;&quot;, &quot;&quot;))</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OwnerName__c</fullName>
        <formula>vlocity_cmt__HouseholdId__r.Owner:User.Alias &amp;  vlocity_cmt__AccountId__r.Owner.Alias &amp;  vlocity_cmt__ContactId__r.Owner.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyEntityAddress__c</fullName>
        <formula>IF( vlocity_cmt__PartyEntityType__c == &apos;Household&apos; || vlocity_cmt__PartyEntityType__c == &apos;Group&apos;, vlocity_cmt__HouseholdId__r.vlocity_cmt__Address__c,
IF( vlocity_cmt__PartyEntityType__c ==&apos;Contact&apos;, vlocity_cmt__ContactId__r.MailingStreet &amp; BR() &amp; 
IF( ISBLANK(vlocity_cmt__ContactId__r.MailingCity), &quot;&quot;, vlocity_cmt__ContactId__r.MailingCity) &amp; IF(AND(NOT(ISBLANK(vlocity_cmt__ContactId__r.MailingCity)), OR( NOT(ISBLANK(vlocity_cmt__ContactId__r.MailingState)), NOT(ISBLANK(vlocity_cmt__ContactId__r.MailingPostalCode)), NOT(ISBLANK(vlocity_cmt__ContactId__r.MailingCountry)))), &quot;, &quot;, &quot; &quot;) &amp; vlocity_cmt__ContactId__r.MailingState &amp; &quot; &quot; &amp; vlocity_cmt__ContactId__r.MailingPostalCode &amp; BR() &amp; 
vlocity_cmt__ContactId__r.MailingCountry, 
IF( vlocity_cmt__PartyEntityType__c ==&apos;Account&apos;, vlocity_cmt__AccountId__r.BillingStreet &amp; BR() &amp; 
IF( ISBLANK(vlocity_cmt__AccountId__r.BillingCity), &quot;&quot;, vlocity_cmt__AccountId__r.BillingCity) &amp; IF(AND(NOT(ISBLANK(vlocity_cmt__AccountId__r.BillingCity)), OR( NOT(ISBLANK(vlocity_cmt__AccountId__r.BillingState)), NOT(ISBLANK(vlocity_cmt__AccountId__r.BillingPostalCode)), NOT(ISBLANK(vlocity_cmt__AccountId__r.BillingCountry)))), &quot;, &quot;, &quot; &quot;) &amp; vlocity_cmt__AccountId__r.BillingState &amp; &quot; &quot; &amp; vlocity_cmt__AccountId__r.BillingPostalCode &amp; BR() &amp; 
vlocity_cmt__AccountId__r.BillingCountry, &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyEntityId__c</fullName>
        <description>This field is used internally to store Ids from different objects. If the party type is contact, this field stores contactId, if it is household, it stores householdId</description>
        <label>Party Entity Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyEntityName__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyEntityPhone__c</fullName>
        <formula>IF(vlocity_cmt__PartyEntityType__c ==&apos;Contact&apos;,  vlocity_cmt__ContactId__r.Phone,
   IF(vlocity_cmt__PartyEntityType__c ==&apos;Account&apos;,  vlocity_cmt__AccountId__r.Phone, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyEntityType__c</fullName>
        <label>Party Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyNumber__c</fullName>
        <externalId>true</externalId>
        <label>Party Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipGroup__c</fullName>
        <label>Relationship Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Party</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>